# huggingface_upload_download_widget

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
hf_widget/: __init__.py  download.py  upload.py
